--- a/conf/application.conf
+++ b/conf/application.conf
@@ -32,8 +32,10 @@ play.i18n.langs = [ "en" ]
 #
  db.default.driver=org.h2.Driver
  db.default.url="jdbc:h2:mem:play"
+ db.default.jndiName = DefaultDS
  db.default.username=sa
  db.default.password=""
+ #jpa.default=DefaultDS
 
  ebean.default = ["models.*"]
 
